GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
See the end for copying conditions.

* Version 1.5.4 (unreleased) [beta]

** SCRAM-SHA-1-PLUS: Fix parsing bug causing memory corruption.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 1.5.3 (released 2010-11-14) [beta]

** libgsasl: Added property for tls-unique channel binding.
The new property GSASL_CB_TLS_UNIQUE takes a base64 encoded tls-unique
channel binding.  New error code GSASL_NO_CB_TLS_UNIQUE is returned
when application fails to provide a channel binding and the mechanism
requires it (i.e., in a PLUS server).

** SCRAM: Added support for SCRAM-SHA-1-PLUS with channel bindings.

** API and ABI modifications.
GSASL_CB_TLS_UNIQUE: ADDED.
GSASL_NO_CB_TLS_UNIQUE: ADDED.

* Version 1.5.2 (released 2010-09-27) [beta]

** GSSAPI/GS2-KRB5: Support for MIT Kerberos for Windows GSS-API library.

** SCRAM server: Compare c= field in client-final to match client-first.
Before our server did not verify that the channel binding and
authorization identity fields weren't tampered with.  Reported by Marc
Santamaria <asgarath@gmail.com>.

** SCRAM server: Interop against clients that supports channel bindings.
Before our server would refuse such connections.  Reported by Marc
Santamaria <asgarath@gmail.com>.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 1.5.1 (released 2010-04-21) [beta]

** libgsasl: No longer require the same or newer libgcrypt it was built with.
Before libgsasl refused to work if it was used with a libgcrypt shared
library that was older than the version that libgsasl was built with.

** GS2: Fix decoding of invalid data in server.  Code review fixes.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 1.5.0 (released 2010-03-31) [beta]
